@@ -103,10 +103,10 @@ index 0ae44ad..dc7fbc8 100644
  	 * Dialog Of Doom.
  	 */
 diff --git a/src/connection-editor/ce-page.h b/src/connection-editor/ce-page.h
-index 41711d9..521dbc6 100644
+index 69955f5..263c685 100644
 --- a/src/connection-editor/ce-page.h
 +++ b/src/connection-editor/ce-page.h
-@@ -48,6 +48,7 @@ typedef void (*PageNewConnectionFunc) (GtkWindow *parent,
+@@ -49,6 +49,7 @@ typedef void (*PageNewConnectionFunc) (GtkWindow *parent,
                                         const char *detail,
                                         NMRemoteSettings *settings,
                                         PageNewConnectionResultFunc result_func,
@@ -135,10 +135,10 @@ index 69da25c..b638530 100644
  }
  
 diff --git a/src/connection-editor/page-bond.c b/src/connection-editor/page-bond.c
-index 799ea94..966625c 100644
+index 0dffd9d..45a86d0 100644
 --- a/src/connection-editor/page-bond.c
 +++ b/src/connection-editor/page-bond.c
-@@ -610,6 +610,7 @@ bond_connection_new (GtkWindow *parent,
+@@ -611,6 +611,7 @@ bond_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -147,10 +147,10 @@ index 799ea94..966625c 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-bond.h b/src/connection-editor/page-bond.h
-index dcc8e1f..3844869 100644
+index fdaa97e..c77ad44 100644
 --- a/src/connection-editor/page-bond.h
 +++ b/src/connection-editor/page-bond.h
-@@ -56,6 +56,7 @@ void bond_connection_new (GtkWindow *parent,
+@@ -57,6 +57,7 @@ void bond_connection_new (GtkWindow *parent,
                            const char *detail,
                            NMRemoteSettings *settings,
                            PageNewConnectionResultFunc result_func,
@@ -159,10 +159,10 @@ index dcc8e1f..3844869 100644
  
  #endif  /* __PAGE_BOND_H__ */
 diff --git a/src/connection-editor/page-bridge.c b/src/connection-editor/page-bridge.c
-index 1ffcb1f..34ff9af 100644
+index a159993..9ab6640 100644
 --- a/src/connection-editor/page-bridge.c
 +++ b/src/connection-editor/page-bridge.c
-@@ -294,6 +294,7 @@ bridge_connection_new (GtkWindow *parent,
+@@ -296,6 +296,7 @@ bridge_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -171,10 +171,10 @@ index 1ffcb1f..34ff9af 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-bridge.h b/src/connection-editor/page-bridge.h
-index fa6d927..4bd0b95 100644
+index 1fe4e5f..4ad1991 100644
 --- a/src/connection-editor/page-bridge.h
 +++ b/src/connection-editor/page-bridge.h
-@@ -56,6 +56,7 @@ void bridge_connection_new (GtkWindow *parent,
+@@ -57,6 +57,7 @@ void bridge_connection_new (GtkWindow *parent,
                              const char *detail,
                              NMRemoteSettings *settings,
                              PageNewConnectionResultFunc result_func,
@@ -183,10 +183,10 @@ index fa6d927..4bd0b95 100644
  
  #endif  /* __PAGE_BRIDGE_H__ */
 diff --git a/src/connection-editor/page-dsl.c b/src/connection-editor/page-dsl.c
-index c327979..a38f333 100644
+index c06dfff..21e2897 100644
 --- a/src/connection-editor/page-dsl.c
 +++ b/src/connection-editor/page-dsl.c
-@@ -221,6 +221,7 @@ dsl_connection_new (GtkWindow *parent,
+@@ -223,6 +223,7 @@ dsl_connection_new (GtkWindow *parent,
                      const char *detail,
                      NMRemoteSettings *settings,
                      PageNewConnectionResultFunc result_func,
@@ -195,10 +195,10 @@ index c327979..a38f333 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-dsl.h b/src/connection-editor/page-dsl.h
-index 514699a..656e3c6 100644
+index f3b0b30..74e3734 100644
 --- a/src/connection-editor/page-dsl.h
 +++ b/src/connection-editor/page-dsl.h
-@@ -58,6 +58,7 @@ void dsl_connection_new (GtkWindow *parent,
+@@ -59,6 +59,7 @@ void dsl_connection_new (GtkWindow *parent,
                           const char *detail,
                           NMRemoteSettings *settings,
                           PageNewConnectionResultFunc callback,
@@ -207,10 +207,10 @@ index 514699a..656e3c6 100644
  
  #endif  /* __PAGE_DSL_H__ */
 diff --git a/src/connection-editor/page-ethernet.c b/src/connection-editor/page-ethernet.c
-index 451ee22..9372c1e 100644
+index 92404c8..fc090ea 100644
 --- a/src/connection-editor/page-ethernet.c
 +++ b/src/connection-editor/page-ethernet.c
-@@ -377,6 +377,7 @@ ethernet_connection_new (GtkWindow *parent,
+@@ -379,6 +379,7 @@ ethernet_connection_new (GtkWindow *parent,
                           const char *detail,
                           NMRemoteSettings *settings,
                           PageNewConnectionResultFunc result_func,
@@ -219,10 +219,10 @@ index 451ee22..9372c1e 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-ethernet.h b/src/connection-editor/page-ethernet.h
-index 4dd4a5c..55ade9b 100644
+index edc331d..1cf6ad1 100644
 --- a/src/connection-editor/page-ethernet.h
 +++ b/src/connection-editor/page-ethernet.h
-@@ -58,6 +58,7 @@ void ethernet_connection_new (GtkWindow *parent,
+@@ -59,6 +59,7 @@ void ethernet_connection_new (GtkWindow *parent,
                                const char *detail,
                                NMRemoteSettings *settings,
                                PageNewConnectionResultFunc result_func,
@@ -231,10 +231,10 @@ index 4dd4a5c..55ade9b 100644
  
  #endif  /* __PAGE_ETHERNET_H__ */
 diff --git a/src/connection-editor/page-infiniband.c b/src/connection-editor/page-infiniband.c
-index 19560a2..bb9335e 100644
+index 8e1eae6..c5355b1 100644
 --- a/src/connection-editor/page-infiniband.c
 +++ b/src/connection-editor/page-infiniband.c
-@@ -253,6 +253,7 @@ infiniband_connection_new (GtkWindow *parent,
+@@ -255,6 +255,7 @@ infiniband_connection_new (GtkWindow *parent,
                             const char *detail,
                             NMRemoteSettings *settings,
                             PageNewConnectionResultFunc result_func,
@@ -243,10 +243,10 @@ index 19560a2..bb9335e 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-infiniband.h b/src/connection-editor/page-infiniband.h
-index e895a98..97bff3b 100644
+index af6d7aa..9a90fcb 100644
 --- a/src/connection-editor/page-infiniband.h
 +++ b/src/connection-editor/page-infiniband.h
-@@ -56,6 +56,7 @@ void infiniband_connection_new (GtkWindow *parent,
+@@ -57,6 +57,7 @@ void infiniband_connection_new (GtkWindow *parent,
                                  const char *detail,
                                  NMRemoteSettings *settings,
                                  PageNewConnectionResultFunc result_func,
@@ -255,10 +255,10 @@ index e895a98..97bff3b 100644
  
  #endif  /* __PAGE_INFINIBAND_H__ */
 diff --git a/src/connection-editor/page-mobile.c b/src/connection-editor/page-mobile.c
-index ef24184..df3d316 100644
+index 541a364..da0d404 100644
 --- a/src/connection-editor/page-mobile.c
 +++ b/src/connection-editor/page-mobile.c
-@@ -452,6 +452,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -454,6 +454,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  	NMConnection *connection = NULL;
  
  	if (!canceled && method) {
@@ -266,7 +266,7 @@ index ef24184..df3d316 100644
  		NMSetting *type_setting;
  		const char *ctype = NULL;
  		char *detail = NULL;
-@@ -465,6 +466,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -467,6 +468,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  			              NM_SETTING_GSM_NUMBER, "*99#",
  			              NM_SETTING_GSM_USERNAME, method->username,
  			              NM_SETTING_GSM_PASSWORD, method->password,
@@ -274,7 +274,7 @@ index ef24184..df3d316 100644
  			              NM_SETTING_GSM_APN, method->gsm_apn,
  			              NULL);
  			break;
-@@ -476,6 +478,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -478,6 +480,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  			              NM_SETTING_CDMA_NUMBER, "#777",
  			              NM_SETTING_GSM_USERNAME, method->username,
  			              NM_SETTING_GSM_PASSWORD, method->password,
@@ -282,7 +282,7 @@ index ef24184..df3d316 100644
  			              NULL);
  			break;
  		default:
-@@ -490,6 +493,13 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -492,6 +495,13 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  		connection = ce_page_new_connection (detail, ctype, FALSE, info->settings, info->user_data);
  		g_free (detail);
  
@@ -296,7 +296,7 @@ index ef24184..df3d316 100644
  		nm_connection_add_setting (connection, type_setting);
  		nm_connection_add_setting (connection, nm_setting_ppp_new ());
  	}
-@@ -514,6 +524,7 @@ mobile_connection_new (GtkWindow *parent,
+@@ -516,6 +526,7 @@ mobile_connection_new (GtkWindow *parent,
                         const char *detail,
                         NMRemoteSettings *settings,
                         PageNewConnectionResultFunc result_func,
@@ -305,10 +305,10 @@ index ef24184..df3d316 100644
  {
  	NMAMobileWizard *wizard;
 diff --git a/src/connection-editor/page-mobile.h b/src/connection-editor/page-mobile.h
-index ab2903c..bc5b479 100644
+index d370ca4..3196d87 100644
 --- a/src/connection-editor/page-mobile.h
 +++ b/src/connection-editor/page-mobile.h
-@@ -58,6 +58,7 @@ void mobile_connection_new (GtkWindow *parent,
+@@ -59,6 +59,7 @@ void mobile_connection_new (GtkWindow *parent,
                              const char *detail,
                              NMRemoteSettings *settings,
                              PageNewConnectionResultFunc result_func,
@@ -317,10 +317,10 @@ index ab2903c..bc5b479 100644
  
  #endif  /* __PAGE_MOBILE_H__ */
 diff --git a/src/connection-editor/page-team.c b/src/connection-editor/page-team.c
-index 9efa43d..786c0fa 100644
+index 700f87d..742f1e9 100644
 --- a/src/connection-editor/page-team.c
 +++ b/src/connection-editor/page-team.c
-@@ -367,6 +367,7 @@ team_connection_new (GtkWindow *parent,
+@@ -369,6 +369,7 @@ team_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -329,10 +329,10 @@ index 9efa43d..786c0fa 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-team.h b/src/connection-editor/page-team.h
-index d1936b3..91d9df3 100644
+index e3cb133..f637459 100644
 --- a/src/connection-editor/page-team.h
 +++ b/src/connection-editor/page-team.h
-@@ -55,6 +55,7 @@ void team_connection_new (GtkWindow *parent,
+@@ -56,6 +56,7 @@ void team_connection_new (GtkWindow *parent,
                            const char *detail,
                            NMRemoteSettings *settings,
                            PageNewConnectionResultFunc result_func,
@@ -341,10 +341,10 @@ index d1936b3..91d9df3 100644
  
  #endif  /* __PAGE_TEAM_H__ */
 diff --git a/src/connection-editor/page-vlan.c b/src/connection-editor/page-vlan.c
-index 1a8c6b6..d41e38a 100644
+index 3f24fc7..e733cd4 100644
 --- a/src/connection-editor/page-vlan.c
 +++ b/src/connection-editor/page-vlan.c
-@@ -673,6 +673,7 @@ vlan_connection_new (GtkWindow *parent,
+@@ -698,6 +698,7 @@ vlan_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -353,10 +353,10 @@ index 1a8c6b6..d41e38a 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-vlan.h b/src/connection-editor/page-vlan.h
-index 0e66a06..c7969aa 100644
+index 80c73c0..2e46230 100644
 --- a/src/connection-editor/page-vlan.h
 +++ b/src/connection-editor/page-vlan.h
-@@ -56,6 +56,7 @@ void vlan_connection_new (GtkWindow *parent,
+@@ -57,6 +57,7 @@ void vlan_connection_new (GtkWindow *parent,
                            const char *detail,
                            NMRemoteSettings *settings,
                            PageNewConnectionResultFunc result_func,
@@ -365,10 +365,10 @@ index 0e66a06..c7969aa 100644
  
  #endif  /* __PAGE_VLAN_H__ */
 diff --git a/src/connection-editor/page-vpn.c b/src/connection-editor/page-vpn.c
-index 004a260..5c0c8b5 100644
+index 6596c0e..faeb3d7 100644
 --- a/src/connection-editor/page-vpn.c
 +++ b/src/connection-editor/page-vpn.c
-@@ -253,6 +253,7 @@ vpn_connection_import (GtkWindow *parent,
+@@ -255,6 +255,7 @@ vpn_connection_import (GtkWindow *parent,
                         const char *detail,
                         NMRemoteSettings *settings,
                         PageNewConnectionResultFunc result_func,
@@ -376,7 +376,7 @@ index 004a260..5c0c8b5 100644
                         gpointer user_data)
  {
  	NewVpnInfo *info;
-@@ -287,9 +288,11 @@ vpn_connection_new (GtkWindow *parent,
+@@ -289,9 +290,11 @@ vpn_connection_new (GtkWindow *parent,
                      const char *detail,
                      NMRemoteSettings *settings,
                      PageNewConnectionResultFunc result_func,
@@ -388,7 +388,7 @@ index 004a260..5c0c8b5 100644
  	NMSetting *s_vpn;
  
  	if (!detail) {
-@@ -315,6 +318,14 @@ vpn_connection_new (GtkWindow *parent,
+@@ -317,6 +320,14 @@ vpn_connection_new (GtkWindow *parent,
  	                                     FALSE,
  	                                     settings,
  	                                     user_data);
@@ -404,10 +404,10 @@ index 004a260..5c0c8b5 100644
  	g_object_set (s_vpn, NM_SETTING_VPN_SERVICE_TYPE, detail, NULL);
  	nm_connection_add_setting (connection, s_vpn);
 diff --git a/src/connection-editor/page-vpn.h b/src/connection-editor/page-vpn.h
-index 2339732..2164930 100644
+index 7d74930..bc14dee 100644
 --- a/src/connection-editor/page-vpn.h
 +++ b/src/connection-editor/page-vpn.h
-@@ -60,12 +60,14 @@ void vpn_connection_new (GtkWindow *parent,
+@@ -61,12 +61,14 @@ void vpn_connection_new (GtkWindow *parent,
                           const char *detail,
                           NMRemoteSettings *settings,
                           PageNewConnectionResultFunc result_func,
@@ -423,19 +423,19 @@ index 2339732..2164930 100644
  
  #endif  /* __PAGE_VPN_H__ */
 diff --git a/src/connection-editor/page-wifi.c b/src/connection-editor/page-wifi.c
-index 8a25c64..9c56e4b 100644
+index 9249453..116e888 100644
 --- a/src/connection-editor/page-wifi.c
 +++ b/src/connection-editor/page-wifi.c
-@@ -33,6 +33,8 @@
- #include <nm-device-wifi.h>
+@@ -34,6 +34,8 @@
  #include <nm-utils.h>
  
+ #include "nm-connection-editor.h"
 +#include "utils.h"
 +
  #include "page-wifi.h"
  
  G_DEFINE_TYPE (CEPageWifi, ce_page_wifi, CE_TYPE_PAGE)
-@@ -622,6 +624,7 @@ wifi_connection_new (GtkWindow *parent,
+@@ -629,6 +631,7 @@ wifi_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -443,7 +443,7 @@ index 8a25c64..9c56e4b 100644
                       gpointer user_data)
  {
  	NMConnection *connection;
-@@ -632,6 +635,17 @@ wifi_connection_new (GtkWindow *parent,
+@@ -639,6 +642,17 @@ wifi_connection_new (GtkWindow *parent,
  	                                     TRUE,
  	                                     settings,
  	                                     user_data);
@@ -462,10 +462,10 @@ index 8a25c64..9c56e4b 100644
  	g_object_set (s_wifi, NM_SETTING_WIRELESS_MODE, "infrastructure", NULL);
  	nm_connection_add_setting (connection, s_wifi);
 diff --git a/src/connection-editor/page-wifi.h b/src/connection-editor/page-wifi.h
-index c039b00..b89e589 100644
+index eee167c..7a502a5 100644
 --- a/src/connection-editor/page-wifi.h
 +++ b/src/connection-editor/page-wifi.h
-@@ -62,6 +62,7 @@ void wifi_connection_new (GtkWindow *parent,
+@@ -63,6 +63,7 @@ void wifi_connection_new (GtkWindow *parent,
                            const char *detail,
                            NMRemoteSettings *settings,
                            PageNewConnectionResultFunc result_func,
@@ -474,10 +474,10 @@ index c039b00..b89e589 100644
  
  #endif  /* __PAGE_WIFI_H__ */
 diff --git a/src/connection-editor/page-wimax.c b/src/connection-editor/page-wimax.c
-index 97c4d90..d8cf40c 100644
+index e7a470e..39d5484 100644
 --- a/src/connection-editor/page-wimax.c
 +++ b/src/connection-editor/page-wimax.c
-@@ -216,6 +216,7 @@ wimax_connection_new (GtkWindow *parent,
+@@ -220,6 +220,7 @@ wimax_connection_new (GtkWindow *parent,
                        const char *detail,
                        NMRemoteSettings *settings,
                        PageNewConnectionResultFunc result_func,
@@ -486,10 +486,10 @@ index 97c4d90..d8cf40c 100644
  {
  	NMConnection *connection;
 diff --git a/src/connection-editor/page-wimax.h b/src/connection-editor/page-wimax.h
-index 6938284..91d937c 100644
+index 4a40048..b2aa2a8 100644
 --- a/src/connection-editor/page-wimax.h
 +++ b/src/connection-editor/page-wimax.h
-@@ -56,6 +56,7 @@ void wimax_connection_new (GtkWindow *parent,
+@@ -57,6 +57,7 @@ void wimax_connection_new (GtkWindow *parent,
                             const char *detail,
                             NMRemoteSettings *settings,
                             PageNewConnectionResultFunc result_func,
@@ -542,7 +542,7 @@ index 870d2be..cd4103d 100644
  
  	/* The Bluetooth settings */
 diff --git a/src/libnm-gtk/nm-wifi-dialog.c b/src/libnm-gtk/nm-wifi-dialog.c
-index ace323b..0916557 100644
+index 396217b..36f3443 100644
 --- a/src/libnm-gtk/nm-wifi-dialog.c
 +++ b/src/libnm-gtk/nm-wifi-dialog.c
 @@ -39,6 +39,7 @@
@@ -553,7 +553,7 @@ index ace323b..0916557 100644
  
  G_DEFINE_TYPE (NMAWifiDialog, nma_wifi_dialog, GTK_TYPE_DIALOG)
  
-@@ -1203,6 +1204,9 @@ nma_wifi_dialog_get_connection (NMAWifiDialog *self,
+@@ -1232,6 +1233,9 @@ nma_wifi_dialog_get_connection (NMAWifiDialog *self,
  			      NM_SETTING_CONNECTION_UUID, uuid,
  			      NULL);
  		g_free (uuid);
@@ -628,10 +628,10 @@ index 1abff65..714fe3d 100644
  
  typedef enum  {
 diff --git a/src/wireless-security/ws-wep-key.c b/src/wireless-security/ws-wep-key.c
-index 2399ace..147f848 100644
+index 0309042..402915f 100644
 --- a/src/wireless-security/ws-wep-key.c
 +++ b/src/wireless-security/ws-wep-key.c
-@@ -147,6 +147,7 @@ static void
+@@ -160,6 +160,7 @@ static void
  fill_connection (WirelessSecurity *parent, NMConnection *connection)
  {
  	WirelessSecurityWEPKey *sec = (WirelessSecurityWEPKey *) parent;
@@ -639,7 +639,7 @@ index 2399ace..147f848 100644
  	NMSettingWirelessSecurity *s_wsec;
  	NMSettingSecretFlags secret_flags;
  	GtkWidget *widget, *passwd_entry;
-@@ -173,6 +174,12 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
+@@ -186,6 +187,12 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
  	              NM_SETTING_WIRELESS_SECURITY_WEP_KEY_TYPE, sec->type,
  	              NULL);
  
@@ -653,10 +653,10 @@ index 2399ace..147f848 100644
  		if (strlen (sec->keys[i]))
  			nm_setting_wireless_security_set_wep_key (s_wsec, i, sec->keys[i]);
 diff --git a/src/wireless-security/ws-wpa-psk.c b/src/wireless-security/ws-wpa-psk.c
-index 5cd658a..f6eaa27 100644
+index 1495707..f45ab1c 100644
 --- a/src/wireless-security/ws-wpa-psk.c
 +++ b/src/wireless-security/ws-wpa-psk.c
-@@ -97,12 +97,14 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
+@@ -104,12 +104,14 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
  	WirelessSecurityWPAPSK *wpa_psk = (WirelessSecurityWPAPSK *) parent;
  	GtkWidget *widget, *passwd_entry;
  	const char *key;
@@ -671,7 +671,7 @@ index 5cd658a..f6eaa27 100644
  	s_wireless = nm_connection_get_setting_wireless (connection);
  	g_assert (s_wireless);
  
-@@ -118,6 +120,9 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
+@@ -125,6 +127,9 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
  	passwd_entry = widget;
  	key = gtk_entry_get_text (GTK_ENTRY (widget));
  	g_object_set (s_wireless_sec, NM_SETTING_WIRELESS_SECURITY_PSK, key, NULL);
